# GARUDA

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
include/garuda/object_detection/: ObjectDetector.h
include/garuda/utilities/: DetectionInfo.h  FrameAdapter.h
include/garuda/vms_server_plugins/analytics/wildlife_detection_geolocation_plugin/: DeviceAgent.h  Engine.h  device_agent.h  engine.h  plugin.h
nx-frontend-web/: README.md  package-lock.json  package.json
nx-frontend-web/src/: WildlifeMap.js
nx-frontend-web/src/fetcher/: AnimalFetcher.js
nx-react-backend/: main.py
scripts/: run_video_streams.bash  start_garuda.bash
src/: App.css  App.js  WildlifeMap.js
src/garuda/object_detection/: ObjectDetector.cpp
src/garuda/vms_server_plugins/analytics/wildlife_detection_geolocation_plugin/: DeviceAgent.cpp  Engine.cpp  Plugin.cpp  device_agent.cpp  engine.cpp  plugin.cpp  test_object_detection.cpp
